@@ -1,5 +1,5 @@
 name    = Dist-Zilla-PluginBundle-IDOPEREL
-version = 0.2
+version = 0.3
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
