@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-IDOPEREL
 
 {{$NEXT}}
+	- Replaced the disappearing Plugin::LoadTests with Plugin::CompileTests
 
 0.2       2010-11-16 12:46:38 Asia/Jerusalem
 	- Added Plugin::CheckChangesHasContent
